update + gitignore
